[project]
name = "pelvibiz-agent-api"
version = "0.1.0"
description = "PelviBiz AI Hub Agent API — Intelligent carousel generation"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "supabase>=2.12.0",
    "httpx>=0.28.0",
    "openai>=1.60.0",
    "python-multipart>=0.0.18",
    "google-genai>=1.0.0",
    "Pillow>=11.0.0",
    "pillow-heif>=0.18.0",
    "pdfplumber>=0.11.0",
    "instaloader>=4.13",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "cryptography>=42.0.0",
    "rembg>=2.0.50",
    "onnxruntime>=1.17.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyrefly]
python_interpreter = ".venv/bin/python3"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]
